--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,32 +24,17 @@
       app:layout_constraintTop_toTopOf="parent" />
 
   <EditText
-      android:id="@+id/editTextTextEmailAddressLogin"
-      android:layout_width="0dp"
-      android:layout_height="50dp"
-      android:layout_marginStart="48dp"
-      android:layout_marginTop="48dp"
-      android:layout_marginEnd="48dp"
-      android:ems="10"
-      android:hint="@string/email"
-      android:inputType="textEmailAddress"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textViewlg" />
-
-  <EditText
       android:id="@+id/editTextTextPasswordLogin"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:layout_marginStart="48dp"
-      android:layout_marginTop="8dp"
       android:layout_marginEnd="48dp"
       android:ems="10"
       android:hint="@string/password"
       android:inputType="textPassword"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressLogin" />
+      app:layout_constraintTop_toBottomOf="@+id/editTextTextUsernameLogin" />
 
   <Button
       android:id="@+id/buttonLogin"
@@ -62,12 +47,27 @@
       app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordLogin" />
 
   <Button
-      android:id="@+id/buttonToRegister"
+      android:id="@+id/buttongetRegister"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
+      android:contextClickable="true"
       android:text="Don't have an account?"
       app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
       app:layout_constraintStart_toStartOf="@+id/buttonLogin"
       app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
+
+  <EditText
+      android:id="@+id/editTextTextUsernameLogin"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="48dp"
+      android:layout_marginTop="48dp"
+      android:layout_marginEnd="48dp"
+      android:ems="10"
+      android:hint="@string/username"
+      android:inputType="text"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textViewlg" />
 </androidx.constraintlayout.widget.ConstraintLayout>
