--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="100dp"
         android:fontFamily="@font/bebas_neue"
         android:text="@string/register"
@@ -40,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
         android:ems="10"
         android:hint="@string/email"
@@ -54,7 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
         android:ems="10"
         android:hint="@string/password"
@@ -68,7 +69,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="100dp"
         android:ems="10"
         android:hint="Re-enter Password"
@@ -86,5 +87,17 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextTextRePasswordRegister"
         app:layout_constraintStart_toStartOf="@+id/editTextTextRePasswordRegister"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextRePasswordRegister" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="86dp"
+        android:text="Already have account? "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
