--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonUserInfo" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonLogout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
