--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,6 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/imageViewStation"
+        android:layout_width="115dp"
+        android:layout_height="107dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewStationTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/imageViewStation"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/textViewStationStatus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/imageViewStation"
+        app:layout_constraintTop_toBottomOf="@+id/textViewStationTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/textViewStationNearby"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/imageViewStation"
+        app:layout_constraintTop_toBottomOf="@+id/textViewStationStatus"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/buttonStationDetails"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/station_detail"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@+id/textViewStationTitle"
+        app:layout_constraintTop_toBottomOf="@+id/textViewStationNearby" />
 </androidx.constraintlayout.widget.ConstraintLayout>
