--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -3,20 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.profile.AddCarFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/textViewFav"
-        android:layout_width="0dp"
+        android:id="@+id/textViewAC"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginEnd="155dp"
         android:fontFamily="@font/bebas_neue"
-        android:text="@string/favorite"
+        android:text="Add Your Car"
         android:textAlignment="center"
         android:textColor="#673AB7"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
