--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,13 +9,15 @@
     <TextView
         android:id="@+id/textViewWelcome"
         android:layout_width="372dp"
-        android:layout_height="37dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="23dp"
         android:fontFamily="@font/bebas_neue"
         android:textAlignment="textStart"
         android:textColor="#673AB7"
-        android:textSize="24sp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,7 +31,7 @@
         android:text="@string/hometitle"
         android:textAlignment="textStart"
         android:textColor="#673AB7"
-        android:textSize="24sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />
 
