--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,11 +24,12 @@
         android:id="@+id/buttonUserInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:background="#00FFFFFF"
         android:text="@string/user_info"
         android:textColor="#000000"
         app:icon="@drawable/baseline_person_24"
+        app:iconTint="#808080"
         app:layout_constraintEnd_toEndOf="@+id/textViewProfile"
         app:layout_constraintStart_toStartOf="@+id/textViewProfile"
         app:layout_constraintTop_toBottomOf="@+id/textViewProfile" />
@@ -37,25 +38,41 @@
         android:id="@+id/buttonSet"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:text="@string/setting"
         android:textColor="#000000"
         app:icon="@drawable/baseline_settings_24"
-        app:layout_constraintEnd_toEndOf="@+id/buttonUserInfo"
-        app:layout_constraintStart_toStartOf="@+id/buttonUserInfo"
-        app:layout_constraintTop_toBottomOf="@+id/buttonUserInfo" />
+        app:iconTint="#808080"
+        app:layout_constraintEnd_toEndOf="@+id/buttonAddCar"
+        app:layout_constraintStart_toStartOf="@+id/buttonAddCar"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAddCar" />
 
     <Button
         android:id="@+id/buttonLogout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:text="@string/logout"
         android:textColor="#000000"
         app:icon="@drawable/baseline_logout_24"
+        app:iconTint="#808080"
         app:layout_constraintEnd_toEndOf="@+id/buttonSet"
         app:layout_constraintStart_toStartOf="@+id/buttonSet"
         app:layout_constraintTop_toBottomOf="@+id/buttonSet" />
+
+    <Button
+        android:id="@+id/buttonAddCar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="#00FFFFFF"
+        android:text="Add New Car"
+        android:textColor="#000000"
+        app:icon="@drawable/baseline_electric_car_24"
+        app:iconTint="#808080"
+        app:layout_constraintEnd_toEndOf="@+id/buttonUserInfo"
+        app:layout_constraintStart_toStartOf="@+id/buttonUserInfo"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUserInfo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
