--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -12,7 +12,11 @@
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
+        android:fontFamily="@font/bebas_neue"
         android:text="@string/user_info"
+        android:textAlignment="center"
+        android:textColor="#673AB7"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,63 +24,78 @@
     <TextView
         android:id="@+id/textViewNm"
         android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:layout_height="23dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="32dp"
+        android:text="Username:"
+        android:textAlignment="viewStart"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewUserInfo" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="Email:"
+        android:textAlignment="viewEnd"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextUserInfoUsername" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="Car Type:"
+        android:textAlignment="viewEnd"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewInfoEmail" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewInfoEmail"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewNm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewNm"
-        app:layout_constraintTop_toTopOf="@+id/textViewNm" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textViewCarType"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toTopOf="@+id/textView6" />
+
+    <EditText
+        android:id="@+id/editTextUserInfoUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="text"
+        android:singleLine="false"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewNm"
+        app:layout_constraintStart_toEndOf="@+id/textViewNm"
+        app:layout_constraintTop_toTopOf="@+id/textViewNm" />
+
+    <Button
+        android:id="@+id/buttonUserInfoSave"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="44dp"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
