--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -80,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="Username"
         android:inputType="text"
@@ -91,7 +92,7 @@
     <Button
         android:id="@+id/buttonUserInfoSave"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
