--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,12 @@
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="402dp"
-        android:layout_height="580dp"
+        android:layout_width="414dp"
+        android:layout_height="586dp"
         android:layout_above="@id/bottom_navigation"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
