--- a/app/src/main/res/layout/fragment_stationdetail.xml
+++ b/app/src/main/res/layout/fragment_stationdetail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.station_details.stationdetailFragment">
+    tools:context=".ui.station_details.StationDetailFragment">
 
     <TextView
         android:id="@+id/textViewDtl"
