--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -10,11 +10,12 @@
         android:id="@+id/textViewAC"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="45dp"
         android:fontFamily="@font/bebas_neue"
         android:text="Add Your Car"
         android:textAlignment="center"
         android:textColor="#673AB7"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
