--- a/app/src/main/res/layout/fragment_stationdetail.xml
+++ b/app/src/main/res/layout/fragment_stationdetail.xml
@@ -11,12 +11,13 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="100dp"
         android:fontFamily="@font/bebas_neue"
         android:text="@string/station_detail"
         android:textAlignment="center"
         android:textColor="#673AB7"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
