--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -7,15 +7,16 @@
 
     <TextView
         android:id="@+id/textViewFav"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="156dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="155dp"
         android:fontFamily="@font/bebas_neue"
         android:text="@string/favorite"
         android:textAlignment="center"
         android:textColor="#673AB7"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
