--- a/app/src/main/res/layout/fragment_stationdetail.xml
+++ b/app/src/main/res/layout/fragment_stationdetail.xml
@@ -7,49 +7,48 @@
     tools:context=".ui.station_details.StationDetailFragment">
 
     <TextView
-        android:id="@+id/textViewDtl"
+        android:id="@+id/textViewTitleDetail"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="45dp"
         android:layout_marginEnd="100dp"
         android:fontFamily="@font/bebas_neue"
         android:text="@string/station_detail"
         android:textAlignment="center"
         android:textColor="#673AB7"
-        android:textSize="34sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageViewDetail1"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDtl"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDetail"
         tools:src="@tools:sample/avatars" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        android:id="@+id/imageViewDetail2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail1"
+        app:layout_constraintStart_toEndOf="@+id/imageViewDetail1"
+        app:layout_constraintTop_toTopOf="@+id/imageViewDetail1"
         tools:src="@tools:sample/avatars" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageViewDetail3"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/imageViewDetail2"
+        app:layout_constraintTop_toTopOf="@+id/imageViewDetail2"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -58,10 +57,10 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail2" />
 
     <TextView
         android:id="@+id/textViewStationAddress"
