--- a/app/src/main/res/layout/fragment_stationdetail.xml
+++ b/app/src/main/res/layout/fragment_stationdetail.xml
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/imageViewDetail1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,18 +33,18 @@
 
     <ImageView
         android:id="@+id/imageViewDetail2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail1"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewDetail3"
         app:layout_constraintStart_toEndOf="@+id/imageViewDetail1"
         app:layout_constraintTop_toTopOf="@+id/imageViewDetail1"
         tools:src="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageViewDetail3"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewDetail2"
@@ -134,5 +134,15 @@
         app:icon="@drawable/baseline_pending_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageButton
+        android:id="@+id/favouritebutton"
+        android:layout_width="60dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:src="@drawable/baseline_star_border_purple500_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewStationAddress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
